# login-history-too

./: .pre-commit-config.yaml  AUTHORS.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  conftest.py  pyproject.toml
django_project/: README.md  settings.py  urls.py
django_project/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
requirements/: requirements_dev.txt  requirements_test.txt
src/login_history_too/: admin.py  apps.py  mixins.py  models.py  settings.py  signals.py  utils.py
src/login_history_too/helpers/: ip.py
src/login_history_too/helpers/tests/: test_ua.py
src/login_history_too/migrations/: 0001_initial.py
src/login_history_too/static/login_history_too/js/: logins.js
src/login_history_too/static/login_history_too/js/ace-builds/: ace.js  ext-beautify.js  ext-code_lens.js  ext-elastic_tabstops_lite.js  ext-emmet.js  ext-error_marker.js  ext-keybinding_menu.js  ext-language_tools.js  ext-linking.js  ext-modelist.js  ext-options.js  ext-prompt.js  ext-rtl.js  ext-searchbox.js  ext-settings_menu.js  ext-spellcheck.js  ext-split.js  ext-static_highlight.js  ext-statusbar.js  ext-textarea.js  ext-themelist.js  ext-whitespace.js  keybinding-emacs.js  keybinding-sublime.js  keybinding-vim.js  keybinding-vscode.js  mode-abap.js  mode-abc.js  mode-actionscript.js  mode-ada.js  mode-alda.js  mode-apache_conf.js  mode-apex.js  mode-applescript.js  mode-aql.js  mode-asciidoc.js  mode-asl.js  mode-assembly_x86.js  mode-autohotkey.js  mode-batchfile.js  (+198 more)
src/login_history_too/static/login_history_too/js/ace-builds/snippets/: abap.js  abc.js  actionscript.js  ada.js  alda.js  apache_conf.js  apex.js  applescript.js  aql.js  asciidoc.js  asl.js  assembly_x86.js  autohotkey.js  batchfile.js  c9search.js  c_cpp.js  cirru.js  clojure.js  cobol.js  coffee.js  coldfusion.js  crystal.js  csharp.js  csound_document.js  csound_orchestra.js  csound_score.js  csp.js  css.js  curly.js  d.js  dart.js  diff.js  django.js  dockerfile.js  dot.js  drools.js  edifact.js  eiffel.js  ejs.js  elixir.js  (+129 more)
tests/: test_mixins.py  test_models.py  test_signals.py  test_utils.py
